use correct sidebar-icon in tab title if dark mode is enabled

--- a/frontend/stylesheets/dark.less
+++ b/frontend/stylesheets/dark.less
@@ -1,6 +1,10 @@
 @import "../../node_modules/antd/dist/antd.dark.less";
 @import "./main.less";
 
+:root {
+  --is-dark-mode: 1;
+}
+
 .welcome-header-wrapper {
   background-image: linear-gradient(0deg, @body-background 0%, @blue-2 70%);
 }
