--- a/frontend/stylesheets/light.less
+++ b/frontend/stylesheets/light.less
@@ -1,2 +1,6 @@
 @import "../../node_modules/antd/dist/antd.less";
 @import "./main.less";
+
+:root {
+  --is-dark-mode: 0;
+}
